# hts-pure

./: Bam.hs  HTS.hs  Index.hs  LICENSE  Main.hs  README.md  hts-pure.cabal
src/: Bam.hs  Main.hs
src/Bio/Alignment/: Bam.hs  BamIndex.hs
src/Bio/Data/: Cigar.hs  Location.hs
