name:                hts-pure
version:             0.1.0.0
synopsis:            Tools to manipulate high-throughput sequencing data
-- description:
homepage:            https://github.com/jeff-k/hts-pure#readme
license:             BSD3
license-file:        LICENSE
author:              jeff-k
maintainer:          jeff@x-0.ca
copyright:           2018 jeff-k
category:            Bioinformatics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Bio.Alignment.Bam, Bio.Alignment.BamIndex,
                       Bio.Data.Location, Bio.Data.Cigar
  build-depends:       base >= 4.7 && < 5, bytestring, binary, zlib
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jeff-k/hts-pure
